Radix sort and wee 7 of coursera course